# otf2-examples

./: otf2_pthread_read.cpp
otf2_pthread_read/: CMakeLists.txt  otf2_pthread_read.cpp
